2004-02-17  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b1)

	* Albums are now sorted alphabetically when using the latest
	  protocol.
	* Added a new launcher in the IA project for debug, which
	  sets the output to a console.
	* When IA console is set, the Log will automatically be sent
	  to stdout. This is to make it easier to have users send
	  in bug reports that include exceptions.

2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1)

	* Re-release...

2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1-b3)

	* Slideshow button is disabled when ther are no pictures to show.
	* This is also the case in the slideshow applet, and an alert is
	  displayed.

2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1-b2)

	* Fixed slideshow on the Mac (the top of the image was
	  obscured by the menu bar). I can't figure out why the Mac VM
	  will not go into full-screen mode...
	* Fixed a potential VM killer bug with going into slideshow
	  mode. This was a Safari-crashing bug on Mac.

2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1-b1)

	* Fixed text color in list and tree when selected.
	* State is clean after an upload attemps (since state
	  was saved to the default location).
	* Fixed bug where loading a state with no pictures in it
	  would make the UI disabled.

	Thanks to Robert Harlow for these.

2004-02-11  Pierre-Luc Paour <gallery@paour.com> (1.3)

	* Fixed moving album to root of Gallery.
	* Changed log file name to GalleryRemoteLog.txt and updated the
	  docs to reflect the change of name and location.

	Release!

2004-02-10  Pierre-Luc Paour <gallery@paour.com> (1.3-b29)

	* Added support for flushing caches. This is useful when uploading
	  from a removable media where the picture names may be the same.
	* Added support for limiting the number of images in a slideshow,
	  similar to the javascript version. Also for disabling recursion.

2004-02-09  Pierre-Luc Paour <gallery@paour.com> (1.3-b28)
