@@ -1,3 +1,8 @@
+2004-02-18  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b2)
+
+	* Catching a wierd VM bug that causes many users not to be able
+	  to upload. This bug is I believe caused by the 1.4.2_03-b2 VM.
+
 2004-02-17  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b1)
 
 	* Albums are now sorted alphabetically when using the latest
